# peer-ai

./: .gitignore  README.md  pyproject.toml
configs/: server.yaml  training.yaml
scripts/: add_more_patterns.py  augment_data.py  generate_training_data.py  merge_and_convert.py  train_model.py
src/peer_ai/: __init__.py  cli.py  models.py
src/peer_ai/analyzers/: __init__.py  diff.py
src/peer_ai/integrations/: __init__.py  github.py  gitlab.py
src/peer_ai/model/: __init__.py  data.py  reviewer.py  train.py
src/peer_ai/rules/: __init__.py
src/peer_ai/server/: __init__.py  app.py
